--- a/src/main/resources/templates/departmentform.html
+++ b/src/main/resources/templates/departmentform.html
@@ -12,7 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Patua+One&display=swap" rel="stylesheet">
-
+    <title></title>
 
 </head>
 <body  >
@@ -26,7 +26,7 @@ font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
 <nav id="nav_bar">
     <ul id="navmenu">
         <li><a class="current" href="/">Home</a></li>
-        <li ><a href="/departmentist">Departments' Information</a></li>
+        <li ><a href="/departmentlist">Departments' Information</a></li>
         <li><a href="/employeelist">Employees' Information</a></li>
         <li><a href="/adddepartment">Add Departments</a></li>
         <li><a href="/addemployee">Add Employees</a></li>
@@ -51,9 +51,22 @@ font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
         <span th:if="${#fields.hasErrors('directorname')}" th:errors="*{directorname}"></span>
         <br>
         <input style="margin-top: 10px;" type="submit" value="Submit" class="btn btn-primary btn-lg" role="button"/>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a style="margin-top: 10px;" href="/" class="btn btn-primary btn-lg" role="button">See all departments </a><br/>
+        <a style="margin-top: 10px;" href="/" class="btn btn-primary btn-lg" role="button">See All Posts </a><br/>
 
     </form>
+
+
+
 </div>
+
+<br/>
+<footer>
+    <div class="footer-main-div" style="margin-left: 300px; width: 1100px; height: 80px;">
+        <p style="color:#ffcce6; ">&copy; Copyright 2019 Emily Marinovich.</p>
+
+
+    </div>
+
+</footer><br/>
 </body>
 </html>
