--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
-    <title>Title</title>
-</head>
-<body>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+
+<div th:replace="base::headNav"></div>
 
 
-<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
+<div style="width: 1000px;height: 600px;margin-left: 300px;" class="row">
+<table>
+    <thead>
+    <tr>
+        <th>Department Name</th>
+        <th>Director Name</th>
+    </tr>
+    <thead>
+    <tbody>
+    <tr th:each="department : ${departments}">
+
+        <td th:text="${department.depname}"></td>
+        <td>
+            <a th:href="@{update_department/{id}(id=${department.id})}">Update</a>
+            <a th:href="@{detail_department/{id}(id=${department.id})}">Details</a>
+            <a th:href="@{delete_department/{id}(id=${department.id})}">Delete</a>
+        </td>
+    </tr>
+    <tbody>
+</table>
+
+<h1 >Employees</h1>
+
+<table>
+    <tr>
+        <th>Employee's Name&nbsp;&nbsp;</th>
+        <th>Job Title&nbsp;</th>
+    </tr>
+    <tr th:each="employee : ${employees}">
+        <td th:text="${employee.name}"></td>
+        <td th:text="${employee.jobtitle}"></td>
+        <td th:text="${employee.department.depname}"></td>
+        <td>
+            <a th:href="@{update_employee/{id}(id=${employee.id})}">Update</a>
+            <a th:href="@{detail_employee/{id}(id=${employee.id})}">Details</a>
+            <a th:href="@{delete_employee/{id}(id=${employee.id})}">Delete</a>
+        </td>
+    </tr>
+</table>
+</div>
+
+<div th:replace="base::footer"></div>
 </body>
 </html>
