--- a/src/main/resources/templates/showdepartment.html
+++ b/src/main/resources/templates/showdepartment.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
-    <title>Title</title>
-</head>
-<body>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+
+<div th:replace="base::headNav"></div>
 
 
-<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
+<div style="width: 1000px;height: 600px;margin-left: 300px;" class="row">
+
+    Department Name: <span th:text="${department.depname}"></span><br />
+
+    <span>Employees:</span><br>
+
+    <tr>
+        <th>Employee Name&nbsp;&nbsp;</th>
+        <th>Job Title</th>
+    </tr>
+
+    <tr th:each="employee : ${department.employees}">
+        <td th:text="${employee.name}"></td>
+        <td th:text="${employee.jobtitle}"></td>
+    </tr>
+<div th:replace="base::footer"></div>
 </body>
 </html>
