--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -87,7 +87,7 @@ body{
     border-collapse: collapse;
     margin: 25px 0;
     font-size: 1.1em;
-    min-width: 1100px;
+    min-width: 1000px;
     border-radius: 5px 5px 0 0;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0,0,0,0.15);
@@ -114,6 +114,7 @@ body{
 }
 /*form*/
 form{
+    margin-top: 40px;
     width:600px;
     padding: 18px;
     margin:auto;
@@ -197,3 +198,62 @@ footer p {
     color: #FFF;
     border-color: #285e8e;
 }
+/* success button
+.btn-success {
+    background-color: #FFF;
+    color: #398439;
+    border-color: #47a447;
+    border-radius: 25px;
+}
+.btn-success:hover,
+.btn-success:focus,
+.btn-success:active    {
+    background-color: #47a447;
+    color: #FFF;
+    border-color: #398439;
+}*/
+
+/* info button
+.btn-info {
+    background-color: #FFF;
+    color: #269abc;
+    border-color: #39b3d7;
+    border-radius: 25px;
+}
+.btn-info:hover,
+.btn-info:focus,
+.btn-info:active    {
+    background-color: #39b3d7;
+    color: #FFF;
+    border-color: #269abc;
+}*/
+
+/* warning button
+.btn-warning {
+    background-color: #FFF;
+    color: #d58512;
+    border-color: #ed9c28;
+    border-radius: 25px;
+}
+.btn-warning:hover,
+.btn-warning:focus,
+.btn-warning:active    {
+    background-color: #ed9c28;
+    color: #FFF;
+    border-color: #d58512;
+}*/
+
+/* danger button
+.btn-danger {
+    background-color: #FFF;
+    color: #ac2925;
+    border-color: #d2322d;
+    border-radius: 25px;
+}
+.btn-danger:hover,
+.btn-danger:focus,
+.btn-danger:active {
+    background-color: #d2322d;
+    color: #FFF;
+    border-color: #ac2925;
+}*/
