--- a/src/main/resources/templates/employeelist.html
+++ b/src/main/resources/templates/employeelist.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <title>Employee</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="/css/style.css" rel="stylesheet" type="text/css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Patua+One&display=swap" rel="stylesheet">
-    <title></title>
-
 </head>
 <body  >
 
@@ -25,26 +18,27 @@ font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
 
 <nav id="nav_bar">
     <ul id="navmenu">
-        <li><a class="current" href="/">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li ><a href="/departmentlist">Departments' Information</a></li>
-        <li><a href="/employeelist">Employees' Information</a></li>
+        <li><a class="current" href="/employeelist">Employees' Information</a></li>
         <li><a href="/adddepartment">Add Departments</a></li>
         <li><a href="/addemployee">Add Employees</a></li>
     </ul>
 </nav><br/>
 
-<a style="margin-left: 30px;" href="/add" class="btn btn-primary btn-lg" role="button">Add a post </a>
 <br/>
 <div style="width: 1000px;height: 600px;margin-left: 300px;" class="row">
 
-    <table class="content-table">
+    <table style="margin-top: 20px;" class="content-table">
         <thead>
         <tr>
             <th>Employee Name&nbsp;&nbsp;</th>
             <th>Job Title&nbsp;</th>
             <th>Department Name</th>
         </tr>
+
         <thead>
+
         <tbody>
         <tr th:each="employee : ${employees}">
             <td th:text="${employee.name}"></td>
@@ -52,17 +46,17 @@ font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
             <td th:text="${employee.department.depname}"></td>
             <td>
 
-                <a th:href="@{/update_employee/{id}(id=${employee.id})}">Update</a>
+                <a th:href="@{/update_employee/{id}(id=${employee.id})}" class="btn btn-primary btn-lg" role="button">Update</a>
 
-                <a th:href="@{/detail_employee/{id}(id=${employee.id})}">Details</a>
+                <a th:href="@{/detail_employee/{id}(id=${employee.id})}" class="btn btn-primary btn-lg" role="button">Details</a>
 
-                <a th:href="@{/delete_employee/{id}(id=${employee.id})}">Delete</a>
+                <a th:href="@{/delete_employee/{id}(id=${employee.id})}" class="btn btn-primary btn-lg" role="button">Delete</a>
 
             </td>
         </tr>
         <tbody>
     </table>
-
+    <h5 style="margin: 40px;">Please enter the employees' information in the page of Add Employees.</h5>
 </div>
 <br/>
 <footer>
