--- a/src/main/resources/templates/departmentform.html
+++ b/src/main/resources/templates/departmentform.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <title>Employee</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="/css/style.css" rel="stylesheet" type="text/css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Patua+One&display=swap" rel="stylesheet">
-    <title></title>
 
 </head>
 <body  >
@@ -25,20 +19,19 @@ font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
 
 <nav id="nav_bar">
     <ul id="navmenu">
-        <li><a class="current" href="/">Home</a></li>
+        <li><a  href="/">Home</a></li>
         <li ><a href="/departmentlist">Departments' Information</a></li>
         <li><a href="/employeelist">Employees' Information</a></li>
-        <li><a href="/adddepartment">Add Departments</a></li>
+        <li><a class="current" href="/adddepartment">Add Departments</a></li>
         <li><a href="/addemployee">Add Employees</a></li>
     </ul>
 </nav><br/>
 
 
-<div style="width: 1000px;height: 600px;margin-left: 300px;" class="row">
+<!--<div style="width: 1000px;height: 600px;margin-left: 300px;" class="row">-->
 
-    <h1 >Department Form</h1>
-
-    <form style="margin-left: 40px;" action="#" th:action="@{/processdepartment}" th:object="${department}" method="post">
+<br/><br/>
+    <form action="#" th:action="@{/process}" th:object="${department}" method="post">
 
         <input type="hidden" th:field="*{id}" />
 
@@ -50,14 +43,14 @@ font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
 
         <span th:if="${#fields.hasErrors('directorname')}" th:errors="*{directorname}"></span>
         <br>
-        <input style="margin-top: 10px;" type="submit" value="Submit" class="btn btn-primary btn-lg" role="button"/>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a style="margin-top: 10px;" href="/" class="btn btn-primary btn-lg" role="button">See All Posts </a><br/>
+        <input type="submit" value="Submit" class="btn btn-primary btn-lg" role="button"/>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a style="margin-top: 10px;" href="/" class="btn btn-primary btn-lg" role="button">See All information of the company. </a><br/>
 
     </form>
 
 
 
-</div>
+<!--</div>-->
 
 <br/>
 <footer>
