--- a/src/main/resources/templates/departmentlist.html
+++ b/src/main/resources/templates/departmentlist.html
@@ -2,20 +2,14 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8">
+        <title>Post List</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="/css/style.css" rel="stylesheet" type="text/css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Patua+One&display=swap" rel="stylesheet"/>
-
-
+        <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Patua+One&display=swap" rel="stylesheet">
     </head>
-    <body  >
+
 
         <div class="jumbotron " >
             <h1 style="font-family: 'Dancing Script', cursive;
@@ -25,8 +19,8 @@ font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
 
         <nav id="nav_bar">
             <ul id="navmenu">
-                <li><a class="current" href="/">Home</a></li>
-                <li ><a href="/departmentlist">Departments' Information</a></li>
+                <li><a  href="/">Home</a></li>
+                <li ><a class="current" href="/departmentlist">Departments' Information</a></li>
                 <li><a href="/employeelist">Employees' Information</a></li>
                 <li><a href="/adddepartment">Add Departments</a></li>
                 <li><a href="/addemployee">Add Employees</a></li>
@@ -34,37 +28,42 @@ font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
         </nav><br/>
 
 
-        <div style="width: 1000px;height: 600px;margin-left: 300px;" class="row">
-            <table>
-            <tr>
-                <th>Department Name&nbsp;</th>
-                <th>Director's Name</th>
-            </tr>
+        <div style="width: 1000px;margin-left: 300px;" class="row">
+            <table class="content-table">
+                <thead>
+                <tr>
+                    <th>Department Name&nbsp;</th>
+                    <th>Director Name</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="department : ${departments}">
+                    <td th:text="${department.depname}"></td>
+                    <td th:text="${department.directorname}"></td>
+                    <td>
+                        <a th:href="@{/update_department/{id}(id=${department.id})}" class="btn btn-primary btn-lg" role="button">Update</a>
+                        <a th:href="@{/detail_department/{id}(id=${department.id})}" class="btn btn-primary btn-lg" role="button">Details</a>
+                        <a th:href="@{/delete_department/{id}(id=${department.id})}" class="btn btn-primary btn-lg" role="button">Delete</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <h5 style="margin: 40px;">After adding the information of the employees, the new data will be listed below properly.</h5>
+<ul>
+             <div th:each="department:${departments}">
+                <h2 th:text="${department.depname}"></h2>
+                <h6 th:inline="text"> Director name: [[${department.directorname}]].</h6>
+                <ul>
+                    <th:block th:each="employee:${department.employees}">
+                        <li th:inline="text"><b>[[${employee.name}]]: </b>[[${employee.jobtitle}]]</li>
+                    </th:block>
+                </ul>
+<br/>
 
-            <tr th:each="department : ${departments}">
-                <td th:text="${department.depname}"></td>
-                <td th:text="${department.directorname}"></td>
-                <td>
-                    <a th:href="@{/update_department/{id}(id=${department.id})}" class="btn btn-primary btn-lg" role="button">Update</a>
-                    <a th:href="@{/detail_department/{id}(id=${department.id})}" class="btn btn-primary btn-lg" role="button">Details</a>
-                    <a th:href="@{/delete_department/{id}(id=${department.id})}" class="btn btn-primary btn-lg" role="button">Delete</a>
-                </td>
-            </tr>
-        </table>
-        </div>
-        <div th:each="department:${departments}">
-            <h2 th:text="${department.depname}"></h2>
-            <h6 th:inline="text">  [[${department.directorname}]].</h6>
-            <ul>
-                <th:block th:each="employee:${department.employees}">
-                    <li th:inline="text"><b>[[${employee.name}]]: </b>[[${employee.jobtitle}]]</li>
-                </th:block>
-            </ul>
+            </div><br/>
+</ul>
 
-
-        </div>
-
-        <br/>
+            <br/></div>
         <footer>
             <div class="footer-main-div" style="margin-left: 300px; width: 1100px; height: 80px;">
                 <p style="color:#ffcce6; ">&copy; Copyright 2019 Emily Marinovich.</p>
