--- a/src/main/resources/templates/employeeform.html
+++ b/src/main/resources/templates/employeeform.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <title>Employee</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="/css/style.css" rel="stylesheet" type="text/css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Patua+One&display=swap" rel="stylesheet"/>
-    <titel>Employee Form</titel>
-
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Patua+One&display=swap" rel="stylesheet">
 </head>
 <body  >
 
@@ -25,15 +18,15 @@ font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
 
 <nav id="nav_bar">
     <ul id="navmenu">
-        <li><a class="current" href="/">Home</a></li>
+        <li><a  href="/">Home</a></li>
         <li ><a href="/departmentlist">Departments' Information</a></li>
         <li><a href="/employeelist">Employees' Information</a></li>
         <li><a href="/adddepartment">Add Departments</a></li>
-        <li><a href="/addemployee">Add Employees</a></li>
+        <li><a class="current" href="/addemployee">Add Employees</a></li>
     </ul>
 </nav><br/>
 
-<h1>Employee Form</h1>
+<br/><br/>
 
 <form action="#" th:action="@{/processempoloyee}" th:object="${employee}" method="post">
 
@@ -61,7 +54,7 @@ font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
 
     <br>
 
-    <input type="submit" value="Submit">
+    <input type="submit" value="Submit" class="btn btn-primary btn-lg" role="button">
 
 </form>
 
