--- a/src/main/resources/templates/showemployee.html
+++ b/src/main/resources/templates/showemployee.html
@@ -3,13 +3,21 @@
 
 <div th:replace="base::headNav"></div>
 
-
-<div style="width: 1000px;height: 600px;margin-left: 300px;" class="row">
-    <h1 >Employee Details</h1>
+<nav id="nav_bar">
+    <ul id="navmenu">
+        <li><a  href="/">Home</a></li>
+        <li ><a href="/departmentlist">Departments' Information</a></li>
+        <li><a class="current" href="/employeelist">Employees' Information</a></li>
+        <li><a href="/adddepartment">Add Departments</a></li>
+        <li><a href="/addemployee">Add Employees</a></li>
+    </ul>
+</nav><br/>
+<div style="width: 1000px;margin-left: 300px;" class="row">
+    <h3 >Employee Details</h3>
     Employee Name: <span th:text="${employee.name}"></span><br />
-    Employee Title: <span th:text="${employee.title}"></span><br />
+    Employee Title: <span th:text="${employee.jobtitle}"></span><br />
     Department Name: <span th:text="${employee.department.depname}"></span><br />
-
+</div>
     <div th:replace="base::footer"></div>
 </body>
 </html>
