--- a/src/main/resources/templates/employeelist.html
+++ b/src/main/resources/templates/employeelist.html
@@ -27,7 +27,7 @@ font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
 </nav><br/>
 
 <br/>
-<div style="width: 1000px;height: 600px;margin-left: 300px;" class="row">
+<div style="width: 1000px;margin-left: 300px;" class="row">
 
     <table style="margin-top: 20px;" class="content-table">
         <thead>
