--- a/src/main/resources/templates/showdepartment.html
+++ b/src/main/resources/templates/showdepartment.html
@@ -14,10 +14,10 @@
 </nav><br/>
 <div style="width: 1000px;margin-left: 300px;" class="row">
 
-    Department Name: <span th:text="${department.depname}"></span><br />
+    <h5 style="margin-left: 50px;">Department Name: <span th:text="${department.depname}"></span><br /></h5>
 
-    <span>Employees:</span><br>
-    <table>
+    <br>
+    <table class="content-table">
         <thead>
     <tr>
         <th>Employee Name&nbsp;&nbsp;</th>
