--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
     </ul>
 </nav><br/>
 
-<div style="width: 1000px;height: 600px;margin-left: 300px;" class="row">
+<div style="width: 1000px;margin-left: 300px;" class="row">
 <table class="content-table">
     <thead>
     <tr>
