--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,6 +24,7 @@
     <tr th:each="department : ${departments}">
 
         <td th:text="${department.depname}"></td>
+        <td th:text="${department.directorname}"></td>
         <td>
             <a th:href="@{update_department/{id}(id=${department.id})}" class="btn btn-primary btn-lg" role="button">Update</a>
             <a th:href="@{detail_department/{id}(id=${department.id})}" class="btn btn-primary btn-lg" role="button">Details</a>
