--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -123,12 +123,12 @@ form{
     color:darkred;
 }
 input[type=text]{
-    width:100%;
+    width:450px;
     padding:5px;
     font-size: 15px;
     color:gray;
 }
-textarea{
+/*textarea{
     width:100%;
     font-size: 16px;
     margin: auto;
@@ -136,7 +136,7 @@ textarea{
     border-top-right-radius: 10px;
     text-align: left;
     padding: 20px;
-}
+}*/
 
 
 
