--- a/src/main/resources/templates/employeeform.html
+++ b/src/main/resources/templates/employeeform.html
@@ -42,7 +42,7 @@ font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
 
     <br>
 
-    Department:&nbsp;<select name="department" th:field="*{department}">
+    Department:&nbsp;<select style="margin:5px;border-radius: 5px;padding: 5px;" name="department" th:field="*{department}">
 
     <option th:each="department : ${departments}"
 
