--- a/src/main/resources/templates/showemployee.html
+++ b/src/main/resources/templates/showemployee.html
@@ -14,7 +14,7 @@
 </nav><br/>
 <div style="width: 1000px;margin-left: 300px;" class="row">
     <div style="width:600px;height: 400px;margin-left: 40px;color:darkred;">
-    <h4 style="margin-left: 50px;">Employee Details</h4><br/>
+    <h4 style="margin-left: 50px;">Employee Details</h4>
 
     Employee Name: <span th:text="${employee.name}"></span><br />
     Employee Title: <span th:text="${employee.jobtitle}"></span><br />
