--- a/src/main/resources/templates/employeeform.html
+++ b/src/main/resources/templates/employeeform.html
@@ -54,7 +54,7 @@ font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
 </select>
 <br/>
     <input hidden="hidden" style="margin:10px; border-radius: 5px;" type="file" name="file" id="real-file" >
-    <button type="button"  id="custom-button" class="btn btn-warning btn-lg" role="button">Choose a Photo</button>
+    <button type="button"  id="custom-button" class="btn btn-warning btn-lg" role="button">Choose your Photo</button>
     <span id="custom-text">No file chosen, yet.</span>
 
     <br>
