--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -128,7 +128,7 @@ form{
     margin-left: 300px;
 }
 input[type=text]{
-    width:300px;
+    width:100%;
     padding:5px;
     font-size: 15px;
     color:gray;
