modified base page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-
-<div th:replace="base::headNav"></div>
+<head>
+    <meta charset="UTF-8">
+    <title>Home</title>
+<div th:replace="base::head"></div>
 <nav id="nav_bar">
     <ul id="navmenu">
         <li><a class="current" href="/">Home</a></li>
