--- a/src/main/resources/templates/showemployee.html
+++ b/src/main/resources/templates/showemployee.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
-<div th:replace="base::headNav"></div>
+<head>
+    <meta charset="UTF-8">
+    <title>Show Employees</title>
+
+<div th:replace="base::head"></div>
 
 <nav id="nav_bar">
     <ul id="navmenu">
