--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,10 +1,11 @@
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<div th:fragment="headNav">
+
     <head>
         <meta charset="UTF-8">
-        <title>Employee</title>
+        <title>Base</title>
+<div th:fragment="head">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="/css/style.css" rel="stylesheet" type="text/css" />
@@ -13,24 +14,17 @@
 
     </head>
 
-
     <div class="jumbotron " >
         <h1 style="font-family: 'Dancing Script', cursive;
-font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
+        font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
         <h3 style="font-family: 'Dancing Script', cursive;color:darkred;">Employees' Database</h3>
     </div>
-
-
-
-
 </div>
 
 <div th:fragment="footer">
     <footer>
         <div class="footer-main-div" style="margin-left: 300px; width: 1100px; height: 80px;">
             <p style="color:#ffcce6; ">&copy; Copyright 2019 Emily Marinovich.</p>
-
-
         </div>
 
     </footer><br/>
