--- a/src/main/resources/templates/departmentlist.html
+++ b/src/main/resources/templates/departmentlist.html
@@ -2,20 +2,8 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8">
-        <title>Post List</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="/css/style.css" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Patua+One&display=swap" rel="stylesheet">
-    </head>
-
-
-        <div class="jumbotron " >
-            <h1 style="font-family: 'Dancing Script', cursive;
-font-family: 'Patua One', cursive;">Sterling Solutions, Inc.</h1>
-            <h3 style="font-family: 'Dancing Script', cursive;color:darkred;">Employees' Database</h3>
-        </div>
+        <title>Department List</title>
+        <div th:replace="base::head"></div>
 
         <nav id="nav_bar">
             <ul id="navmenu">
