--- a/src/main/resources/templates/departmentform.html
+++ b/src/main/resources/templates/departmentform.html
@@ -27,7 +27,7 @@
 
         <span th:if="${#fields.hasErrors('depname')}" th:errors="*{depname}"></span>
         <br>
-        Director Name:&nbsp;<input type="text" th:field="*{directorname}" />
+        Head of Department:&nbsp;<input type="text" th:field="*{directorname}" />
 
         <span th:if="${#fields.hasErrors('directorname')}" th:errors="*{directorname}"></span>
         <br>
