--- a/src/main/resources/templates/departmentlist.html
+++ b/src/main/resources/templates/departmentlist.html
@@ -21,7 +21,7 @@
                 <thead>
                 <tr>
                     <th>Department Name&nbsp;</th>
-                    <th>Director Name</th>
+                    <th>Head of Department</th>
                 </tr>
                 </thead>
                 <tbody>
