--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
     <thead>
     <tr>
         <th>Department Name</th>
-        <th>Director Name</th>
+        <th>Head of Department</th>
     </tr>
     </thead>
     <tbody>
