--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -134,6 +134,7 @@ input[type=text]{
     color:gray;
     margin:5px;
     border-radius: 5px;
+    height: 45px;
 }
 
 
@@ -223,7 +224,7 @@ footer p {
     /*font-size: 14px;*/
     margin-top:10px;
     margin-bottom: 30px;
-    width:250px;
+    width:350px;
 
 }
 .btn-warning:hover,
